# bookdata

./: README.md  TODO.md  gitignore  pyproject.toml  requirements.txt
booksdata/: __init__.py  config.yaml  parsing.py
src/bookdata/: parsing.py
src/booksdata/: settings.py
test/: test.py
