[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "booksdata"
version = "0.1.0"
description = "Asynchronous web scraper for books.toscrape.com"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "pandas",
    "pyyaml"
]
