[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "booksdata"
packages = ["booksdata"]
version = "0.1.0"
description = "Asynchronous web scraper for books.toscrape.com"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "pandas",
    "pyyaml",
    "openpyxl",
    "aiodns"
]
